# atari800

./: .gitignore  .travis.yml  Makefile.am  README.1ST  README.TXT  atari000.avi  atari800.cflags  atari800.files  atari800.nsi  atari800.spec  autogen.sh  config.guess  config.sub  configure.ac
DOC/: .gitattributes  BUGS  BUILD.PS2  BUILD.RPI  BUILD.android  BUILD.linux  BUILD.linux_package  BUILD.linux_rpi_package  BUILD.windows  CHANGES  CHANGES.OLD  CHANGES.dc  CREDITS  ChangeLog  FAQ  HOWTO-DIRTYRECT  HOWTO-DIRTYSPAN  INSTALL  INSTALL.amiga  INSTALL.dos  INSTALL.falcon  INSTALL.ps2  INSTALL.wince  LPTjoy.txt  Makefile.am  NEWS  PORTING  PortMaintainers  README  README.RPI  README.android  README.dc  README.libatari800  README.ps2  Redirect.txt  TESTS.dc  TODO  TODO-falcon  TODO.falcon  USAGE  (+11 more)
src/: .cvsignore  Makefile  Makefile.allegro  Makefile.am  Makefile.cygwin  Makefile.dos  Makefile.falcon  Makefile.in  Makefile.linux  Makefile.unix  Makefile.win32  acconfig.h  af80.c  af80.h  afile.c  afile.h  akey.h  antic.c  antic.h  artifact.c  artifact.h  atari.c  atari.h  atari800-shader.frag  atari800-shader.vert  atari800.man  atari800_res.rc  atari_amiga.c  atari_amiga.h  atari_basic.c  atari_curses.c  atari_falcon.c  atari_ntsc.c  atari_ntsc.h  atari_ps2.c  atari_rpi.c  atari_sdl.c  atari_svgalib.c  atari_vga.c  atari_x11.c  (+173 more)
src/amiga/: .cvsignore  Atari800.guide  Atari800_rev.h  Atari800_rev.i  Atari800_rev.s  ReadMe  amiga.c  amiga.h  amiga_asm.asm  amiga_asm.h  async.c  async.h  config.h  gui.c  gui.h  makefile  support.c  support.h  unixfunc.c
src/android/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  build.xml  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
src/android/jni/: Android.mk.in  Application.mk  androidinput.c  androidinput.h  graphics.c  graphics.h  jni.c  jni.h  keys.inc  platform.c  platform.h  sound.c
src/android/res/drawable/: actionbar_bg.xml
src/android/res/drawable-anydpi-v21/: ic_folder_open.xml  ic_keyboard.xml  ic_settings.xml
src/android/res/layout/: extended_keymap.xml  file_selector_footer.xml  file_selector_row.xml  slider_dialog.xml
src/android/res/menu/: fsel_menu.xml  menu.xml
src/android/res/values/: arrays.xml  attrs.xml  strings.xml
src/android/res/values-v11/: themes.xml
src/android/res/xml/: preferences.xml
src/android/src/: A800Renderer.java  A800view.java  AudioThread.java  FileSelector.java  KeymapPreference.java  MainActivity.java  Preferences.java  SliderPreference.java
src/apple/Atari800.xcworkspace/: contents.xcworkspacedata
src/apple/Atari800iOS/Atari800iOS/: AppDelegate.swift  CartridgeTypesViewController.swift  EmulationViewController.swift  Info.plist  ViewController.swift
src/apple/Atari800iOS/Atari800iOS.xcodeproj/: project.pbxproj
src/apple/Atari800macOS/Atari800macOS/: AppDelegate.swift  CartridgeTypesViewController.swift  DrivesViewController.swift  EmulationViewController.swift  EmulationWindowController.swift  Info.plist  ViewController.swift
src/apple/Atari800macOS/Atari800macOS.xcodeproj/: project.pbxproj
src/apple/Atari800tvOS/Atari800tvOS/: AppDelegate.swift  EmulationViewController.swift  LibraryViewController.swift  ViewController.swift
src/apple/Atari800tvOS/Atari800tvOS.xcodeproj/: project.pbxproj
src/atari_ntsc/: atari_ntsc.c  atari_ntsc.h  atari_ntsc_config.h  atari_ntsc_impl.h
src/codecs/: audio.c  audio.h  audio_adpcm.c  audio_adpcm.h  audio_mp3.c  audio_mp3.h  audio_mulaw.c  audio_mulaw.h  audio_pcm.c  audio_pcm.h  container.c  container.h  container_avi.c  container_avi.h  container_mp3.c  container_mp3.h  container_wav.c  container_wav.h  image.c  image.h  image_pcx.c  image_pcx.h  image_png.c  image_png.h  video.c  video.h  video_mpng.c  video_mpng.h  video_mrle.c  video_mrle.h  video_zmbv.c  video_zmbv.h
src/dc/: Makefile.dc  atari800.cfg  atari_dc.c  config.h  dc_chdir.c  displayscreen.S  icon.h  shlelf-ocram.xc  version.h  vmu.c  vmu.h
src/dos/: atari_vga.c  dos_ints.h  dos_sb.c  dos_sb.h  dossound.c  sound_dos.c  sound_dos.h  vga_asm.s  vga_gfx.c  vga_gfx.h
src/falcon/: c2p_uni.S  c2p_uni.asm  c2p_uni.s  c2p_unid.S  c2p_unid.asm  c2p_unid.s  c2pmac.S  c2pmac.asm  c2pmac.i  c2pmac.s  cpu_m68k.S  cpu_m68k.asm  gst2gcc.ttp  ikbd.S  ikbd.asm  ikbd.s  jclkcook.h  main.c  res.h  sound.c  sound_dma.S  sound_dma.asm  videl.S  videl.asm  videl.c  videl.h  xcb.h
src/gles2/: video.c
src/javanvm/: UnixRuntime.patch  atari800.java  atari_javanvm.c  atari_javanvm.h  input.c  input.h  javanvm.h  main.c  sound.c  video.c  video.h
src/libatari800/: Doxyfile  api.c  cpu_crash.h  exit.c  guess_settings.c  init.c  init.h  input.c  input.h  libatari800.h  libatari800_test.c  main.c  main.h  sound.c  sound.h  statesav.c  statesav.h  video.c
src/macosx/: SDLMain.h  SDLMain.m  config.h
src/macosx/Atari800MacOSX.pbproj/: markg.pbxuser  project.pbxproj
src/roms/: altirra_5200_charset.c  altirra_5200_os.c  altirra_5200_os.h  altirra_basic.c  altirraos_800.c  altirraos_xl.c
src/sdl/: atari800-shader.vert  build_shaders.sh  font_atlas_data.h  gen-atari800-shader.frag.h  gen-atari800-shader.vert.h  init.c  init.h  input.c  input.h  main.c  monitor_window.c  monitor_window.h  palette.c  palette.h  sound.c  sound.h  video.c  video.h  video_gl.c  video_gl.h  video_sw.c  video_sw.h
src/vms/: decw_vmsbuild.com  vmsbuild.com
src/win32/: .cvsignore  atari.rc  atari_win32.c  atari_win32.h  joystick.c  joystick.h  keyboard.c  keyboard.h  main.c  main.cpp  main.h  main_menu.h  render_direct3d.cpp  render_direct3d.h  render_directdraw.c  render_directdraw.h  render_gdi.c  render_gdi.h  render_gdiplus.cpp  render_gdiplus.h  screen.c  screen.h  screen_win32.c  screen_win32.h  sound.c  sound.h
src/win32/msc/: Makefile  config.h
src/wince/: COMPILING  PocketAtari.vcp  Readme-WinCE.txt
src/wince/missing/: dirent.h  errno.h  fcntl.h  missing.c  signal.h  time.h
src/wince/port/: atari_wince.c  config.h  keyboard.cpp  keyboard.h  main.c  main.h  missing.c  missing.h  resource.rc  screen.cpp  screen.h  screen_wince.cpp  screen_wince.h  sound.c  ui_wince.c
(+199 files in other folders)
