doc_DATA = README INSTALL USAGE NEWS

EXTRA_DIST = $(doc_DATA) \
	BUGS \
	BUILD.PS2 \
	BUILD.RPI \
	BUILD.windows \
	CHANGES.OLD \
	CHANGES.dc \
	CREDITS \
	ChangeLog \
	FAQ \
	HOWTO-DIRTYRECT \
	HOWTO-DIRTYSPAN \
	INSTALL.dos \
	INSTALL.falcon \
	INSTALL.ps2 \
	INSTALL.wince \
	LPTjoy.txt \
	PORTING \
	PortMaintainers \
	README.RPI \
	README.android \
	README.dc \
	README.ps2 \
	TESTS.dc \
	TODO \
	cart.txt \
	coverage.txt \
	directx.txt \
	emuos.txt \
	pokeysnd.txt \
	r_device.txt \
	rdevice_faq.txt \
	readme.html.in \
	trainer.txt \
	$(empty)
